using UnityEngine;

public static class AnimatorHashLib
{
    // A
    public static readonly int AttackDirection = Animator.StringToHash("Attack Direction");
    public static readonly int Attack = Animator.StringToHash("Attack");
    public static readonly int AttackReady = Animator.StringToHash("Attack Ready");

    // B
    public static readonly int Blend2Attack = Animator.StringToHash("Blend to Attack");
    public static readonly int BoadIdle = Animator.StringToHash("BoadIdle");
    public static readonly int BlendSpeed = Animator.StringToHash("Blend Speed");
    public static readonly int BoadJump   = Animator.StringToHash("BoadJump");
    public static readonly int BlendMove = Animator.StringToHash("Blend to Move");
    public static readonly int BlendDead = Animator.StringToHash("Blend to Dead");

    // C
    public static readonly int Close = Animator.StringToHash("Close");
    public static readonly int CriticalHit = Animator.StringToHash("Critical Hit");

    // D
    public static readonly int Dead = Animator.StringToHash("Dead");
    public static readonly int DeadStyle = Animator.StringToHash("DeadStyle");
    public static readonly int DeadByExplosion = Animator.StringToHash("Dead By Explosion");
    public static readonly int Defense = Animator.StringToHash("Defense");
    public static readonly int Deflect = Animator.StringToHash("Deflect");
    public static readonly int DeflectSpeed = Animator.StringToHash("Deflect Speed");

    public static readonly int Down = Animator.StringToHash("Down");
    public static readonly int DashLeft = Animator.StringToHash("LeftDash");
    public static readonly int DashRight = Animator.StringToHash("RightDash");
   
    // E
    // F
    public static readonly int FireBallAttack = Animator.StringToHash("Fire Ball Attack");

    // G
    public static readonly int Good = Animator.StringToHash("Good");
    public static readonly int GunAttack = Animator.StringToHash("Gun Attack");

    public static readonly int GunAttackReady = Animator.StringToHash("Gun Attack Ready");

    // H
    public static readonly int Hit = Animator.StringToHash("Hit");
    // I
    public static readonly int Idle = Animator.StringToHash("Idle");
    public static readonly int IsMoving = Animator.StringToHash("IsMoving");
    public static readonly int IsJumping = Animator.StringToHash("IsJumping");
    public static readonly int IsStopped = Animator.StringToHash("IsStopped");

    // J
    public static readonly int Jump = Animator.StringToHash("Jump");
    public static readonly int JumpOutBoat = Animator.StringToHash("JumpOutBoat");
    public static readonly int JumpType = Animator.StringToHash("JumpType");

    // K
    public static readonly int KnockOut = Animator.StringToHash("Knock Out");

    // L
    // M
    public static readonly int Main = Animator.StringToHash("Main");
    public static readonly int Move = Animator.StringToHash("Move");
    public static readonly int Landing = Animator.StringToHash("Landing");
    public static readonly int LieToDie = Animator.StringToHash("Lie To Die");
    // N
    // O
    public static readonly int Open = Animator.StringToHash("Open");

    // P
    public static readonly int Perfect = Animator.StringToHash("Perfect");
    public static readonly int Perform = Animator.StringToHash("Perform");

    public static readonly int Phase = Animator.StringToHash("Phase");

    public static readonly int Play = Animator.StringToHash("Play");
    // Q
    // R
    public static readonly int Running           = Animator.StringToHash("Running");
    public static readonly int Run               = Animator.StringToHash("Run");
    public static readonly int RocketAttack      = Animator.StringToHash("Rocket Attack");
    public static readonly int RocketAttackReady = Animator.StringToHash("Rocket Attack Ready");
    // S
    public static readonly int Spawn = Animator.StringToHash("Spawn");
    public static readonly int Speed = Animator.StringToHash("Speed");
    public static readonly int Spin = Animator.StringToHash("Spin");
    public static readonly int Stand = Animator.StringToHash("Stand");
    public static readonly int StandUp = Animator.StringToHash("Stand Up");

    public static readonly int Stun = Animator.StringToHash("Stun");

    // T
    public static readonly int TakeDamage = Animator.StringToHash("TakeDamage");

    // U
    public static readonly int Up = Animator.StringToHash("Up");

    // V
    public static readonly int Victory = Animator.StringToHash("Victory");
    // W
    public static readonly int WakeUp = Animator.StringToHash("Wake Up");
    public static readonly int Wake = Animator.StringToHash("Wake");
    public static readonly int Weave = Animator.StringToHash("Weave");
    public static readonly int WeaveStartDirection = Animator.StringToHash("Weave Start Direction");

    public static readonly int Wheelie = Animator.StringToHash("Wheelie");
    // X
    // Y
    // Z
}